suppliers patch
