# app/Http/Controllers/Finance/SuppliersController.php
@@ -36,12 +36,12 @@ class SuppliersController extends BaseController
      *  security={
      *     {"bearer": {}},
      *   },
+     *   @SWG\Parameter(name="activity_id",in="query",description="activity id",required=true,type="integer"),
      *   @SWG\Parameter(name="name",in="query",description="name",required=true,type="string"),
      *   @SWG\Parameter(name="location",in="query",description="location",required=false,type="string"),
      *   @SWG\Parameter(name="description",in="query",description="description",required=false,type="string"),
      *   @SWG\Parameter(name="phone",in="query",description="phone",required=true,type="string"),
      *   @SWG\Parameter(name="email",in="query",description="email",required=false,type="string"),
-     *   @SWG\Parameter(name="currency",in="query",description="currency",required=true,type="string"),
      *   @SWG\Parameter(name="amount_paid",in="query",description="amount_paid",required=true,type="number"),
      *   @SWG\Parameter(name="amount_pending",in="query",description="amount_pending",required=true,type="number"),
      *   @SWG\Response(response=200, description="Success"),
@@ -60,12 +60,12 @@ class SuppliersController extends BaseController
      *     {"bearer": {}},
      *   },
      *   @SWG\Parameter(name="id",in="path",description="supplier id",required=true,type="string"),
+     *   @SWG\Parameter(name="activity_id",in="query",description="activity id",required=true,type="integer"),
      *   @SWG\Parameter(name="name",in="query",description="name",required=true,type="string"),
      *   @SWG\Parameter(name="location",in="query",description="location",required=false,type="string"),
      *   @SWG\Parameter(name="description",in="query",description="description",required=false,type="string"),
      *   @SWG\Parameter(name="phone",in="query",description="phone",required=true,type="string"),
      *   @SWG\Parameter(name="email",in="query",description="email",required=false,type="string"),
-     *   @SWG\Parameter(name="currency",in="query",description="currency",required=true,type="string"),
      *   @SWG\Parameter(name="amount_paid",in="query",description="amount_paid",required=true,type="number"),
      *   @SWG\Parameter(name="amount_pending",in="query",description="amount_pending",required=true,type="number"),
      *   @SWG\Response(response=200, description="Success"),
